new commit added

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
       <section class="connect pt-5 pb-5">
         <div class="container">
           <div class="row align-items-center gap-5 gap-lg-0">
-            <div class=" col-sm-12 col-lg-6 m-auto text-center">
+            <div class="col-xs-10 col-sm-12 col-lg-6 m-auto text-center">
               <img src="./assets/images/orange.jpg" class="rounded-circle" alt="orange" />
             </div>
             <div class=" col-sm-12 col-lg-6">
