some responsive changes added

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           >
             <span class="navbar-toggler-icon"></span>
           </button>
+          <!-- hambergure menu -->
           <div class="collapse navbar-collapse flex-grow-0" id="navbarText">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 text-right">
               <li class="nav-item">
@@ -48,18 +49,17 @@
           </div>
         </div>
       </nav>
+      <!-- header body -->
       <section class="text-white">
         <div class="container">
-          <div class="row gap-5 align-items-center">
-            <div class="col-sm-12 col-lg-7 col-xl-8">
+          <div class="row gap-5 gap-lg-0 align-items-center">
+            <div class="col-sm-12 col-lg-8">
               <h1 class="fw-normal">This is website with bootstrap</h1>
               <div class="d-flex align-items-center gap-3">
                 <div class="icon text-center">
                   <i class="fas fa-check bg-white text-primary p-2 rounded"></i>
                 </div>
-                <span
-                  class="fs-6 w-100"
-                >
+                <span class="fs-6 w-100">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Atque, adipisci tenetur. Consectetur a, maxime culpa nisi
                 </span>
@@ -68,8 +68,7 @@
                 <div class="icon text-center">
                   <i class="fas fa-check bg-white text-primary p-2 rounded"></i>
                 </div>
-                <span
-                  class="fs-6 w-100" >
+                <span class="fs-6 w-100">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Atque, adipisci tenetur. Consectetur a, maxime culpa nisi
                 </span>
@@ -78,15 +77,13 @@
                 <div class="icon text-center">
                   <i class="fas fa-check bg-white text-primary p-2 rounded"></i>
                 </div>
-                <span
-                  class="fs-6 w-100"
-                >
+                <span class="fs-6 w-100">
                   Lorem ipsum dolor sit amet consectetur adipisicing elit.
                   Atque, adipisci tenetur. Consectetur a, maxime culpa nisi
                 </span>
               </div>
             </div>
-            <div class="col-10 col-sm-10 col-md-8 col-lg-4 col-xl-3 m-auto text-center">
+            <div class="col-10 col-md-8 col-lg-4 m-auto text-center">
               <form action="" class="p-3 rounded-3 bg-primary">
                 <h2>Sign Up Today</h2>
                 <p>Please fill out this form to register</p>
@@ -126,6 +123,7 @@
       </section>
     </header>
     <main>
+      <!-- slider section -->
       <section class="pt-5 pb-5">
         <div class="container">
           <div class="row gap-5 gap-md-0">
@@ -222,6 +220,7 @@
           </div>
         </div>
       </section>
+      <!-- Explore section -->
       <section class="bg-black text-white text-center pt-5 pb-5">
         <div class="container">
           <h2 class="fw-light">Explore</h2>
@@ -238,9 +237,13 @@
         <div class="container">
           <div class="row align-items-center gap-5 gap-lg-0">
             <div class="col-xs-10 col-sm-12 col-lg-6 m-auto text-center">
-              <img src="./assets/images/orange.jpg" class="rounded-circle" alt="orange" />
+              <img
+                src="./assets/images/orange.jpg"
+                class="rounded-circle"
+                alt="orange"
+              />
             </div>
-            <div class=" col-sm-12 col-lg-6">
+            <div class="col-sm-12 col-lg-6">
               <h3>Explorem Learn & Connect</h3>
               <p class="text-secondary">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil
@@ -272,6 +275,7 @@
           </div>
         </div>
       </section>
+      <!-- Create section -->
       <section class="bg-primary text-white text-center pt-5 pb-5">
         <div class="container">
           <h2 class="fw-light">Create</h2>
@@ -287,9 +291,9 @@
       <section class="connect pt-5 pb-5 bg-secondary text-white">
         <div class="container">
           <div class="row align-items-center gap-5 gap-lg-0">
-            <div class=" col-sm-12 col-lg-6">
+            <div class="col-sm-12 col-lg-6">
               <h3>Create Your Passion</h3>
-              <p >
+              <p>
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil
                 veritatis delectus in eum ratione aliquam voluptate voluptatem
                 assumenda. Provident aperiam vel sint aspernatur corrupti amet
@@ -299,7 +303,7 @@
                 <div class="icon text-center">
                   <i class="fas fa-check bg-white text-primary p-2 rounded"></i>
                 </div>
-                <p >
+                <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim
                   totam officia eos eaque autem quaerat facere dolores vel nemo,
                   nihil aliquam qui optio.
@@ -307,22 +311,26 @@
               </div>
               <div class="d-flex align-items-center gap-3">
                 <div class="icon text-center">
-                <i class="fas fa-check bg-white text-primary p-2 rounded"></i>
-              </div>
-                <p >
+                  <i class="fas fa-check bg-white text-primary p-2 rounded"></i>
+                </div>
+                <p>
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim
                   totam officia eos eaque autem quaerat facere dolores vel nemo,
                   nihil aliquam qui optio.
                 </p>
               </div>
             </div>
-            <div class=" col-sm-12 col-lg-6 m-auto text-center">
-              <img src="./assets/images/img_97.png" class="rounded-circle" alt="orange" />
+            <div class="col-sm-12 col-lg-6 m-auto text-center">
+              <img
+                src="./assets/images/img_97.png"
+                class="rounded-circle"
+                alt="orange"
+              />
             </div>
-          
           </div>
         </div>
       </section>
+      <!-- Share section -->
       <section class="bg-info text-white text-center pt-5 pb-5">
         <div class="container">
           <h2 class="fw-light">Share</h2>
@@ -338,10 +346,14 @@
       <section class="connect pt-5 pb-5">
         <div class="container">
           <div class="row align-items-center gap-5 gap-lg-0">
-            <div class=" col-sm-12 col-lg-6 m-auto text-center">
-              <img src="./assets/images/media_33.jpg" class="rounded-circle" alt="orange" />
+            <div class="col-sm-12 col-lg-6 m-auto text-center">
+              <img
+                src="./assets/images/media_33.jpg"
+                class="rounded-circle"
+                alt="orange"
+              />
             </div>
-            <div class=" col-sm-12 col-lg-6">
+            <div class="col-sm-12 col-lg-6">
               <h3>Share What You Create</h3>
               <p class="text-secondary">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil
@@ -375,11 +387,11 @@
       </section>
     </main>
     <footer class="bg-black text-white p-5">
-     <div class="container text-center">
+      <div class="container text-center">
         <h4>Website</h4>
-      <span>copyright 2021 ©</span>
-      <button class="btn btn-primary d-block m-auto mt-3">Contact Us</button>
-     </div>
+        <span>copyright 2021 ©</span>
+        <button class="btn btn-primary d-block m-auto mt-3">Contact Us</button>
+      </div>
     </footer>
     <script src="./js/bootstrap.min.js"></script>
   </body>
