--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
+    <header class="min-vh-100 d-flex justify-content-center align-items-center">
       <nav
         class="navbar navbar-expand-lg bg-body-tertiary bg-dark fixed-top border-bottom border-2 border-primary"
         data-bs-theme="dark"
